Pull request #1343: fix search input styles
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 09f8dd8667b71f6ccfb99f03c9649bb799bcaba9
Merge: bc6f8c8cf e3b026b96
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Sep 15 15:12:07 2022 +0300

    merge

commit bc6f8c8cfc31cf3960a47c06d3f3425f9a6ecf81
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Sep 15 14:15:09 2022 +0300

    AG-16476 add if searchRef

commit 8919cf3a93d675f609c4ab780586406a8a15722f
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Sep 15 10:40:26 2022 +0300

    AG-16476 fix vars

commit adb59a778b1a73d2b58b2e5a298e1ef4591667a9
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Sep 15 10:36:29 2022 +0300

    AG-16476 remove autoFocus attribute

commit 2c119f355b9c1129f94a3486e475d3f24b81fa35
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Sep 15 10:34:30 2022 +0300

    AG-16476 fix search input styles

--- a/Extension/src/pages/options/components/Filters/Search/search.pcss
+++ b/Extension/src/pages/options/components/Filters/Search/search.pcss
@@ -13,6 +13,14 @@
         background-color: var(--black);
     }
 
+    &--focused {
+        background-color: var(--gray300);
+
+        @media (prefers-color-scheme: dark) {
+            background-color: var(--gray900);
+        }
+    }
+
     &__label {
         min-width: 90px;
         flex-grow: 1;
@@ -38,6 +46,10 @@
             @media (min-width: 640px) {
                 font-size: 16px;
             }
+        }
+
+        &:focus {
+            outline: none;
         }
 
         @media (prefers-color-scheme: dark) {
@@ -99,6 +111,10 @@
         &__cross {
             color: var(--gray400);
         }
+
+        &--focused {
+            background-color: var(--gray300);
+        }
     }
 }
 
@@ -113,6 +129,10 @@
 
         &__cross {
             color: var(--gray400);
+        }
+
+        &--focused {
+            background-color: var(--gray900);
         }
     }
 }
